# VBench

./: evaluate_i2v.py  pyproject.toml
